wip: add frontmatter support, update packages, fix some issues

--- a/_content/en/1.mdx
+++ b/_content/en/1.mdx
@@ -1,1 +1,12 @@
+---
+title: Page 1
+description:
+date: '2022-09-01'
+modified_date: '2022-11-20'
+image:
+  title: Page 1
+  theme: light
+---
+
+
 # This is the page 1
