--- a/_content/en/2.mdx
+++ b/_content/en/2.mdx
@@ -1,1 +1,11 @@
+---
+title: Page 2
+description:
+date: '2022-09-01'
+modified_date: '2022-11-20'
+image:
+  title: Page 2
+  theme: light
+---
+
 # This is the page 2
