--- a/_content/ru/1.mdx
+++ b/_content/ru/1.mdx
@@ -1,3 +1,13 @@
+---
+title: Страница 1
+description:
+date: '2022-09-01'
+modified_date: '2022-11-20'
+image:
+  title: Новый блог страница 1
+  theme: light
+---
+
 # Это страница 1
 
 А вот счетчик
