--- a/_content/en/post-1.mdx
+++ b/_content/en/post-1.mdx
@@ -1,10 +1,10 @@
 ---
-title: Page 1
+title: Post 1
 description:
 date: '2022-09-01'
 modified_date: '2022-11-20'
 image:
-  title: Page 1
+  title: Post 1
   theme: light
 ---
 
