--- a/_content/en/post-2.mdx
+++ b/_content/en/post-2.mdx
@@ -1,10 +1,10 @@
 ---
-title: Page 2
+title: Post 2
 description:
 date: '2022-09-01'
 modified_date: '2022-11-20'
 image:
-  title: Page 2
+  title: Post 2
   theme: light
 ---
 
