feat: generate image from local files

--- a/_content/en/post-2.mdx
+++ b/_content/en/post-2.mdx
@@ -4,8 +4,12 @@ description:
 date: '2022-09-01'
 modified_date: '2022-11-20'
 image:
-  title: Post 2
-  theme: light
+  #background: rgb(233,200,100)
+  # background: '#ccc'
+  background: url('https://vchirikov.ru/assets/img/banners/ansible.png')
+  title: Post hot reload test
+  text: My awesome blog engine
+  theme: dark
 ---
 
 # This is the page 221
