docs: add demo to readme.md

--- a/_content/en/post-1.mdx
+++ b/_content/en/post-1.mdx
@@ -10,3 +10,16 @@ image:
 
 
 # This is the page 1
+
+
+## Lorem Ipsum
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non tortor ut urna cursus tempor. Cras sed massa lectus. Praesent tempus id quam non vehicula. Phasellus sagittis turpis ut sapien dignissim elementum. Aenean bibendum dapibus lacus. Nunc at gravida arcu. Nam aliquam blandit ante. Aliquam nec fermentum libero. Nullam tempor nisi sit amet lacus porttitor gravida at volutpat justo. Donec feugiat, enim accumsan vehicula ultricies, lectus eros molestie risus, vel maximus ligula leo et nunc.
+
+Donec sed nulla urna. Sed sed nibh non massa tristique fermentum. Etiam ullamcorper condimentum dui, at luctus augue ultrices vel. Cras sodales scelerisque tortor ac venenatis. Phasellus vel lectus tellus. Pellentesque commodo dictum iaculis. Aliquam consectetur imperdiet mauris.
+
+Praesent vulputate libero ac eleifend varius. Nullam in quam orci. Nam ac mi nec magna vestibulum commodo ut sed est. Etiam non dolor in nisl egestas sollicitudin. Etiam ac dignissim est, non vulputate tortor. Cras eu metus laoreet, mattis dolor nec, euismod purus. Proin auctor dolor vel porta pellentesque. Vivamus porttitor tristique tortor.
+
+Phasellus maximus tellus et justo cursus tincidunt. Curabitur est velit, gravida sit amet turpis non, scelerisque gravida nulla. Etiam at sem a sapien porta euismod. Etiam porttitor, nisi at faucibus luctus, justo odio convallis turpis, in rhoncus lorem nunc quis sem. Phasellus blandit venenatis elementum. Nulla id rhoncus lorem, in dapibus lorem. Sed at rhoncus ex. Cras sem lectus, suscipit eu lacinia eget, vestibulum ut turpis. Suspendisse potenti. Praesent nec risus malesuada, varius urna viverra, pellentesque diam. In convallis tellus sed est sagittis pretium. Integer eget dignissim massa, vel volutpat nisi. Cras arcu odio, ultrices ac dignissim non, cursus non neque.
+
+Aenean a blandit dolor. In condimentum tellus a quam euismod tincidunt. Nam cursus lorem quis nisi tincidunt egestas. Sed erat arcu, feugiat nec pharetra sed, vulputate ac sem. Ut a dapibus lectus. Curabitur id ante lectus. Vivamus euismod lacus eget massa pharetra tempus. Pellentesque interdum leo eu faucibus tristique.
