--- a/_content/en/post-2.mdx
+++ b/_content/en/post-2.mdx
@@ -4,12 +4,17 @@ description:
 date: '2022-09-01'
 modified_date: '2022-11-20'
 image:
-  #background: rgb(233,200,100)
+  # background: rgb(233,200,100)
   # background: '#ccc'
   background: url('https://vchirikov.ru/assets/img/banners/ansible.png')
   title: Post hot reload test
-  text: My awesome blog engine
+  text: My awesome blog engine 123
   theme: dark
 ---
 
-# This is the page 221
+# This is the page 2
+
+Page post with some tricky staff
+
+
+<Counter />
